--- a/src/index.css
+++ b/src/index.css
@@ -26,16 +26,29 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: white;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #1a1a1a;
 }
-
+p {
+  font-size: 1.2em;
+  color: #213547;
+}
+h3 {
+  font-family: "Courier New", Courier, monospace;
+  font-style: italic;
+  color: #242424;
+  font-size: larger;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -43,7 +56,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #d7a613;
   cursor: pointer;
   transition: border-color 0.25s;
 }
